project(graviton)

add_executable(graviton 
	graviton_test
	./gvn_lua/lua_lib/lgc.c
./gvn_lua/lua_lib/lapi.c
./gvn_lua/lua_lib/lauxlib.c
./gvn_lua/lua_lib/lbaselib.c
./gvn_lua/lua_lib/lbitlib.c
./gvn_lua/lua_lib/lcode.c
./gvn_lua/lua_lib/lcorolib.c
./gvn_lua/lua_lib/lctype.c
./gvn_lua/lua_lib/ldblib.c
./gvn_lua/lua_lib/ldebug.c
./gvn_lua/lua_lib/ldo.c
./gvn_lua/lua_lib/ldump.c
./gvn_lua/lua_lib/lfunc.c
./gvn_lua/lua_lib/linit.c
./gvn_lua/lua_lib/liolib.c
./gvn_lua/lua_lib/llex.c
./gvn_lua/lua_lib/lmathlib.c
./gvn_lua/lua_lib/lmem.c
./gvn_lua/lua_lib/loadlib.c
./gvn_lua/lua_lib/lobject.c
./gvn_lua/lua_lib/lopcodes.c
./gvn_lua/lua_lib/loslib.c
./gvn_lua/lua_lib/lparser.c
./gvn_lua/lua_lib/lstate.c
./gvn_lua/lua_lib/lstring.c
./gvn_lua/lua_lib/lstrlib.c
./gvn_lua/lua_lib/ltable.c
./gvn_lua/lua_lib/ltablib.c
./gvn_lua/lua_lib/ltm.c
./gvn_lua/lua_lib/lundump.c
./gvn_lua/lua_lib/lvm.c
./gvn_lua/lua_lib/lzio.c
)

